--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Project Notes</string>
+    <string name="app_version">v.1.1 | Разработано командой Project. 2023 г.</string>
+    <string name="app_version_credits">1.1 Release</string>
+    <string name="CodeVersion">2</string>
+    <string name="minAndroidSDK">API 26 (OREO 8.0)</string>
 </resources>
